--- a/package.json
+++ b/package.json
@@ -108,16 +108,21 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile"
-  },
-  "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.2",
-    "@types/vscode": "^1.40.0",
-    "glob": "^7.1.6",
-    "mocha": "^8.1.3",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
-  }
+        "prettier": "prettier --ignore-path .gitignore \"**/*.+(ts|js|json|md)\"",
+        "prettier:write": "npm run prettier -- --write",
+        "prettier:check": "npm run prettier -- --list-different"
+    },
+    "devDependencies": {
+        "@types/glob": "^7.1.3",
+        "@types/mocha": "^8.0.3",
+        "@types/node": "^14.11.2",
+        "@types/vscode": "^1.40.0",
+        "glob": "^7.1.6",
+        "mocha": "^8.1.3",
+        "prettier": "^2.3.2",
+        "eslint": "^7.30.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "typescript": "^4.0.3"
+    }
 }
