--- a/package.json
+++ b/package.json
@@ -110,19 +110,22 @@
         "watch": "tsc -watch -p ./",
         "prettier": "prettier --ignore-path .gitignore \"**/*.+(ts|js|json|md)\"",
         "prettier:write": "npm run prettier -- --write",
-        "prettier:check": "npm run prettier -- --list-different"
+        "prettier:check": "npm run prettier -- --list-different",
+        "version": "yarn changelog && code CHANGELOG.md --wait && git add CHANGELOG.md",
+        "changelog": "gitmoji-changelog"
     },
     "devDependencies": {
         "@types/glob": "^7.1.3",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.11.2",
         "@types/vscode": "^1.40.0",
-        "glob": "^7.1.6",
-        "mocha": "^8.1.3",
-        "prettier": "^2.3.2",
         "eslint": "^7.30.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
+        "gitmoji-changelog": "^2.3.0",
+        "glob": "^7.1.6",
+        "mocha": "^8.1.3",
+        "prettier": "^2.3.2",
         "typescript": "^4.0.3"
     }
 }
