--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
         "glob": "^7.1.6",
         "mocha": "^8.1.3",
         "prettier": "^2.3.2",
-        "typescript": "^4.0.3"
+        "typescript": "^4.0.3",
+        "vsce": "^2.14.0"
     }
 }
