--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "prettier": "prettier --ignore-path .gitignore \"**/*.+(ts|js|json|md)\"",
         "prettier:write": "npm run prettier -- --write",
         "prettier:check": "npm run prettier -- --list-different",
+        "deploy": "vsce publish --yarn",
         "version": "yarn changelog && code CHANGELOG.md --wait && git add CHANGELOG.md",
         "changelog": "gitmoji-changelog"
     },
